Correct alignment of Skill sub-header

--- a/source/components/Layout.small.scss
+++ b/source/components/Layout.small.scss
@@ -41,5 +41,13 @@
       "skills"
     ;
     grid-template-columns: 1fr;
+
+    header.subheader {
+      grid-template-columns: 1fr;
+
+      .skill:nth-child(2) {
+        display: none;
+      }
+    }
   }
 }
